Fix cover inner text alignment

--- a/.build/assets/styles/__blocks/_cover.scss
+++ b/.build/assets/styles/__blocks/_cover.scss
@@ -95,16 +95,8 @@
 		padding-bottom: var(--unit);
 		width: 100vw;
 		max-width: var(--constraint-narrow);
-		.alignfull & {
-			p {
-				max-width: var(--constraint-narrow);
-				margin-left: auto;
-				margin-right: auto;
-			}
-			@include desktop {
-				max-width: var(--constraint-wide);
-			}
-		}
+		margin-left: auto;
+		margin-right: auto;
 	}
 
 	&.is-vertically-aligned-bottom {
